--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="your_primary_color">#FF373741</color>
+    <color name="your_primary_dark_color">#FF3E3E4A</color>
+    <color name="your_accent_color">#FFEB8B46</color>
+    <color name="your_toolbar_text_color">#FFFEFEFE</color>
+    <color name="your_status_bar_color">#FF2F2F39</color>
+    <color name="your_background_color">#FF2F2F39</color>
 </resources>
